trying to fix logo cutoff

--- a/main.scss
+++ b/main.scss
@@ -42,7 +42,7 @@ body{
 }
 
 .home_slide > img:first-of-type{
-  width: 100%;
+  width: 65%;
 }
 
 .home_slide > .spiral_logo{
